--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "bootstrap": "^5.2.3",
     "firebase": "^9.18.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
+    "react-pdf": "^6.2.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
-    "react-bootstrap": "^2.7.2",
-  
-    "react-modal": "^3.16.1",
-   
-
     "reactjs-popup": "^2.0.5",
     "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
