--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "emoji-mart": "^5.5.2",
+    "emoji-picker-react": "^4.4.8",
     "firebase": "^9.18.0",
+    "fluent-emoji": "^0.1.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-modal": "^3.16.1",
-    "react-pdf": "^6.2.2",
+    "react-input-emoji": "^5.0.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
-    "reactjs-popup": "^2.0.5",
     "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
